2007-08-21  Juri Linkov  <juri@jurta.org>

	* delsel.el (delete-selection-pre-hook):
	* emulation/cua-base.el (cua-paste): Use `mouse-region-match'
	instead of checking last-command.

2007-08-21  Juri Linkov  <juri@jurta.org>

	* loadup.el: Preload "button".

2007-08-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/bytecomp.el (byte-compile-interactive-only-functions):
	Add previous-line and next-line.

	* vc-arch.el (vc-arch-extra-menu-map): New var and fun.
	(vc-arch-find-file-not-found-hook): Remove, it's now the default.

	* vc-hooks.el (vc-menu-entry): New var.
	(vc-mode-line-map): Use it so that this menu also uses the extra-menu.
	(menu-bar-tools-menu): Add the VC menu here rather than in menu-bar.el.
	(vc-menu-map): Declare and initialize in one step.
	(vc-menu-map-filter): Move&rename from menu-bar.el:menu-bar-vc-filter

	* menu-bar.el (vc-menu-map): Don't setup any more.
	Instead, just create the proper spot in the menu.

2007-08-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smerge-mode.el (smerge-resolve): New arg `safe'.
	(smerge-resolve-all, smerge-batch-resolve): New function.
	(smerge-refine): Make sure `diff' returns the expected result.
	(smerge-parsep-re): New const.
	(smerge-mode): Use it to adjust paragraph-separate.

	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Correctly match / regexp matchers as first char on a line when
	fontifying only that line.

	* emacs-lisp/cl-macs.el (cl-transform-lambda): Preserve the match-data.

2007-08-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-bzr.el: Don't fiddle with vc-handled-backend.
	(vc-bzr-registered): Don't redundantly protect against
	file-error.  Actually use the format-specific code.
	(vc-bzr-buffer-nonblank-p): Remove.
	(vc-bzr-status): Change `kindchange' -> `kindchanged'.

2007-08-20  Juri Linkov  <juri@jurta.org>

	* startup.el (fancy-splash-text): Change multiple tabs into one
	tab.  Remove "Useful File menu items" section (with "Exit Emacs"